# mirage

./: .gitignore  CLAUDE.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  demo_smoke.yml
docs/: API.md  ARCHITECTURE.md  DATA_MODEL.md  IMPLEMENTATION_PLAN.md  METRICS.md  PRD.md  README.md  SETUP.md  TEST_PLAN.md
docs/.github/: pull_request_template.md
docs/adrs/: ADR-0001-orchestrator-separation.md  ADR-0002-repository-pattern.md  ADR-TEMPLATE.md
docs/pr/: TEMPLATE.md
docs/pr-notes/: PR00-docs-setup.md  PR01-scaffolding.md  PR02-identity.md  PR03-normalization.md  PR04-metrics-tier0.md  PR05-metrics-tier1.md  PR06-status-badges.md  PR07-mock-provider.md  PR08-worker.md  PR09-fastapi-experiments.md  PR10-api-runs.md  PR11-tasks.md  PR12-ratings.md  PR13-adapter-refactor.md  PR13-demo-scripts.md  PR14-ui-overview.md  PR15-fix-mock-provider.md  PR15-ui-eval.md  PR16-export.md  PR17-syncnet.md
scripts/: create_demo_assets.py  seed_demo.py  smoke_demo.py
tests/: conftest.py  test_api_experiments.py  test_api_ratings.py  test_api_runs.py  test_api_tasks.py  test_bundle.py  test_db_schema.py  test_demo.py  test_face_metrics.py  test_identity.py  test_metrics_tier0.py  test_metrics_tier1.py  test_models.py  test_normalize.py  test_providers.py  test_status.py  test_syncnet.py  test_video_quality.py  test_worker.py
ui/: .env.local.example  package-lock.json
ui/components/: CollapsibleSection.module.css  CollapsibleSection.tsx  EvalOverlay.module.css  EvalOverlay.tsx  MetricsBlock.module.css  MetricsBlock.tsx  Results.module.css  Results.tsx  (+6 more)
(+50 files in other folders)
