[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mirage"
version = "0.1.0"
description = "A-Roll Eval Loop MVP"
readme = "docs/README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "pydantic>=2.4.0",
    "sqlalchemy>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]
api = [
    "fastapi>=0.100",
    "uvicorn>=0.20",
]
metrics = [
    "numpy>=1.24",
    "opencv-python>=4.8",
    "mediapipe>=0.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []

[tool.ruff.format]
quote-style = "double"

[tool.hatch.build.targets.wheel]
packages = ["src/mirage"]
